--- a/app/src/main/res/layout/card_dashboard_transactions.xml
+++ b/app/src/main/res/layout/card_dashboard_transactions.xml
@@ -13,18 +13,6 @@
 
 
     <TextView
-        android:id="@+id/id_card_tipo"
-        style="@style/text_style_tipo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:textAlignment="center"
-        android:textStyle="italic"
-        app:layout_constraintTop_toBottomOf="@+id/id_card_importo"
-        tools:layout_editor_absoluteX="8dp" />
-
-
-    <TextView
         android:id="@+id/id_card_importo"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -32,13 +20,13 @@
 
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="16541"
         android:textAlignment="center"
         android:textSize="24sp"
-        app:layout_constraintEnd_toStartOf="@+id/ic_recurrence"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_conversion_absoluteHeight="54dp"
-        tools:layout_conversion_absoluteWidth="278dp"
-        tools:layout_editor_absoluteY="25dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/ic_recurrence"
@@ -47,11 +35,10 @@
         android:layout_marginEnd="8dp"
         android:padding="2dp"
         android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="@+id/id_card_importo"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
         app:layout_constraintEnd_toStartOf="@+id/imageView2"
-        app:srcCompat="@drawable/ic_recurrence"
-        tools:layout_conversion_absoluteHeight="54dp"
-        tools:layout_conversion_absoluteWidth="28dp" />
+        app:layout_constraintTop_toTopOf="@+id/imageView2"
+        app:srcCompat="@drawable/ic_recurrence" />
 
     <ImageView
         android:id="@+id/imageView2"
@@ -60,26 +47,38 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:padding="2dp"
-        app:layout_constraintBottom_toBottomOf="@+id/ic_recurrence"
+        app:layout_constraintBottom_toBottomOf="@+id/id_card_importo"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/id_card_importo"
         app:srcCompat="@drawable/ic_trans_out"
         tools:layout_conversion_absoluteHeight="54dp"
         tools:layout_conversion_absoluteWidth="28dp" />
 
 
+    <TextView
+        android:id="@+id/id_card_tipo"
+        style="@style/text_style_tipo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="assegno"
+        android:textAlignment="center"
+        android:textStyle="italic"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/id_card_importo" />
+
     <ImageView
         android:id="@+id/ic_beneficiario"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="23dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/id_card_beneficiario"
         app:layout_constraintEnd_toStartOf="@+id/id_card_beneficiario"
-        app:layout_constraintHorizontal_chainStyle="packed"
-        app:layout_constraintTop_toBottomOf="@+id/ic_recurrence"
-        app:srcCompat="@drawable/ic_beneficiario"
-        tools:layout_conversion_absoluteHeight="24dp"
-        tools:layout_conversion_absoluteWidth="24dp" />
+        app:layout_constraintTop_toTopOf="@+id/id_card_beneficiario"
+        app:srcCompat="@drawable/ic_beneficiario" />
 
     <TextView
         android:id="@+id/id_card_beneficiario"
@@ -87,14 +86,13 @@
         style="@style/text_style_beneficiario"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginTop="8dp"
+        android:text="pio"
         android:textAlignment="center"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ic_recurrence"
+        app:layout_constraintTop_toBottomOf="@+id/id_card_importo"
         tools:layout_conversion_absoluteHeight="25dp"
         tools:layout_conversion_absoluteWidth="1dp" />
 
@@ -103,7 +101,7 @@
         android:id="@+id/hidden_transaction_group"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="visible"
+        android:visibility="invisible"
         app:constraint_referenced_ids="id_card_beneficiario, ic_beneficiario, id_card_tipo" />
 </android.support.constraint.ConstraintLayout>
 
