--- a/app/src/main/res/layout/card_dashboard_dates.xml
+++ b/app/src/main/res/layout/card_dashboard_dates.xml
@@ -26,21 +26,38 @@
         app:layout_constraintEnd_toStartOf="@+id/id_card_scadenza_month"
         app:layout_constraintHorizontal_bias="0.51"
         app:layout_constraintHorizontal_chainStyle="packed"
-        app:layout_constraintStart_toEndOf="@+id/rv_movimenti"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_movimenti"
+    <android.support.v7.widget.CardView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:backgroundTint="@android:color/transparent"
+        android:layout_marginTop="8dp"
+        app:cardBackgroundColor="@android:color/white"
+        app:cardCornerRadius="15dp"
+        app:cardElevation="1dp"
+        app:cardMaxElevation="1dp"
+        app:cardUseCompatPadding="true"
+        app:contentPadding="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/id_card_scadenza_day" />
+        app:layout_constraintTop_toBottomOf="@+id/id_card_scadenza_day">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_movimenti"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:backgroundTint="@android:color/transparent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/id_card_scadenza_day" />
+    </android.support.v7.widget.CardView>
+
 
     <TextView
         android:id="@+id/id_card_scadenza_month"
