--- a/app/src/main/res/layout/card_dashboard_transactions.xml
+++ b/app/src/main/res/layout/card_dashboard_transactions.xml
@@ -1,19 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/linearLayout"
-
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    app:cardBackgroundColor="@android:color/white"
-    app:cardCornerRadius="5dp"
-    app:cardElevation="1dp"
-    app:cardMaxElevation="1dp"
-    app:cardUseCompatPadding="true"
-    app:contentPadding="5dp">
-
     <android.support.constraint.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
@@ -174,5 +163,4 @@
     </android.support.constraint.ConstraintLayout>
 
 
-</android.support.v7.widget.CardView>
 
